# optimize_routing

./: .coverage  .gitignore  LICENSE  README.md  colab_benchmark.ipynb  comparison.ipynb  multi_period_routing_MILP_refactor.ipynb  pyproject.toml
.github/workflows/: ci.yml
bayesian_forecast/: diagnostics.py  forecast.py  model.py  synthesize.py
docs/superpowers/plans/: 2026-04-19-rl-comparison.md  2026-04-23-cuopt-routing-experiment.md  2026-05-08-bayesian-robust-supply-chain.md
docs/superpowers/specs/: 2026-04-19-rl-comparison-design.md
optimizer/: construct_data_objects.py  data_objects.py  math_model_constraints.py  math_model_declaration.py  or_tools_functions.py  run_optimizer.py
optimizer/ortools_objects/: component_factory.py
ortools_objects/: component.py  component_decorators.py  component_factory.py  constraint.py  cost_objects.py  indexed_component.py  indexed_set.py  model.py  objective.py  param.py  set.py  var.py
results/: cuopt_benchmark.csv  rl_vrp_ortools.csv  rl_vrp_ortools_curve.csv
rl/: agent.py  benchmark.py  environment.py  environment_vrp.py  train.py  train_vrp.py
rl/solvers/: cuopt_vrp.py  ortools_vrp.py  protocol.py
tests/: test_agent.py  test_benchmark.py  test_environment.py  test_environment_vrp.py  test_optimizer.py  test_results.py  test_solvers.py  test_vrp_benchmark.py
tests/bayesian_forecast/: test_chance_constrained.py  test_forecast.py  test_synthesize.py
utils/: log.py  results.py
vrp_benchmark/: _bench_util.py  benchmark.py  benchmark_real.py  benchmark_solomon.py  data.py  data_tw.py  results.ipynb  results_real.ipynb  train_dqn.py
vrp_benchmark/datasets/: solomon.py  uchoa.py
vrp_benchmark/models/: dqn_n10.pt  dqn_n20.pt  dqn_n30.pt  dqn_n50.pt
vrp_benchmark/solvers/: _cuopt_base.py  _ortools_util.py  chance_constrained_milp.py  cuopt_tw.py  cuopt_vrp.py  dqn.py  greedy.py  greedy_tw.py  milp.py  ortools_tw.py  ortools_vrp.py  protocol.py
