[project]
name = "optimize-routing"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7",
    "ortools>=9.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "notebook>=7.0",
    "vrplib>=2.2.0",
    "pyvrp>=0.13.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]
# DQN training requires PyTorch. Install with CUDA support:
# uv pip install torch --index-url https://download.pytorch.org/whl/cu124
dqn = ["torch>=2.0"]
# cuopt-sh-client connects to a running cuOpt Docker container via REST.
# Install: uv pip install --extra-index-url https://pypi.nvidia.com cuopt-sh-client
cuopt = ["cuopt-sh-client>=26.4"]
# Bayesian forecasting (Experiment 1 robust optimization track, #13).
# PyMC requires a C compiler; pip install works on Linux but conda is the
# documented path for Windows/macOS. PyTensor + NUTS pulls ~500MB.
# Install: uv pip install -e ".[bayesian]"
bayesian = [
    "pymc>=5.0",
    "arviz>=0.17",
    "xarray>=2024.1",
    "netCDF4>=1.6",
    "scipy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["optimizer", "ortools_objects", "rl", "utils", "vrp_benchmark"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
    "slow: tests that run NUTS sampling (skip with `pytest -m 'not slow'`)",
]
